KNOWN BUGS:
* Valgrind-2.1.X will interfere with writeactive, break fchmod. Use 2.0.
* The code sometimes uses timeout_client where it should use a server timeout.
|
Changes since 20041006a:
- Change: fetchnews will flag groups as moderated if the reported status
  flag is 'y' but the group has the tag ' (Moderated)'

20041006a: Changes since 20040920a:
- Feature: texpire offers an "-a" option to expire article based
  (as leafnode-1 did) rather than thread-based.
- Documentation: README* provided an invalid hosts.allow example that
  used the prefix length rather than the netmask; tcpd only understands
  the latter. Reported by Gundemarie Scholz.

20040920a - Changes since 20040916a:
- Bugfix: 20040916a broke article retrieval for many newsreaders.
  Reported by Robert Clark and Jack Raats.

20040916a - Changes since 20040915a:
- Change: leafnode, the NNTP daemon, will no longer update overview
  information, in an attempt to fix Yvon Thoraval's slowness observed on
  MacOS X. If the groups appear inaccessible, running either fetchnews
  or texpire should fix this.

20040915a - Changes since 20040823b:
- Bugfix: A timeout while connecting to a server (default 30 seconds)
  caused fetchnews to abort and print "Alarm clock."
  Reported by Michael Rulov.
- Change: the fetchnews connect timeout now applies to each of the
  server's addresses.
- Documentation: The texpire manual page was revised and updated.

20040823b - Changes since 20040823a:
- Bugfix: Fix assertion failure. The "failure" case was actually an
  expected failure and should not cause an abort. Thanks to Jack Raats.
- Documentation: fill in missing ChangeLog information.

20040823a - Changes since 20040818a:
- Bugfix: only_group_pcre now also applies to delaybody groups. Reported
  by Cory C. Albrecht.
- Bugfix: diagnose errors when getting articles marked for download
- Feature: new option timeout_delaybody. Suggested by Cory C. Albrecht.